[package]
name = "panacea"
version = "0.2.0"
edition = "2021"

# abheet: no longer needed.
# rust-version = "1.68.0"

repository = "https://github.com/KULeuven-COSIC/Panacea"
license = "MIT"
readme = "README.md"
authors = ["Kelong Cong <kelong.cong@esat.kuleuven.be>", "Georgio Nicolas <georgio.nicolas@esat.kuleuven.be>"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.test]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
rayon = "1.8.0"
bitvec = "1.0.1"
# dyn-stack = "0.8.3"

# abheet: add new dependencies
dyn-stack = "0.13.2"
tfhe = "1.6.2"
tfhe-fft = "0.10.1"
tfhe-csprng = "0.9.1"
# tfhe = { version = "1.6.1", path = "../tfhe-rs/tfhe" }
# tfhe-fft = { version = "0.10.1", path = "../tfhe-rs/tfhe-fft" }
# tfhe-csprng = { version = "0.9.0", path = "../tfhe-rs/tfhe-csprng" }

# abheet: delete concrete_core dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
# concrete-core = { version = "1.0.2", features = ["x86_64", "__private_docs"] }
# concrete-csprng = { version = "0.2.2", features = ["x86_64"] }
# concrete-core = { version = "1.0.2", path = "../concrete-core-1.0.2", features = ["x86_64", "__private_docs"] }

# # Ignore aarch64 for now.
# [target.'cfg(target_arch = "aarch64")'.dependencies]
# concrete-core = { version = "1.0.2", features = ["aarch64", "__private_docs"] }
# concrete-csprng = { version = "0.2.2", features = ["aarch64"] }


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
